--- a/bitnami/harbor/values.yaml
+++ b/bitnami/harbor/values.yaml
@@ -503,6 +503,10 @@ nginx:
   affinity: {}
   ## Additional deployment annotations
   podAnnotations: {}
+  ## When setting up Harbor behind another reverse proxy, such as a nginx instance, set this value to true
+  ## if the reverse proxy already provides the 'X-Forwarded-Proto' header field.
+  ## This is, for example, the case for the OpenShift HAProxy router.
+  behindReverseProxy: false
   ## Configure extra options for liveness and readiness probes
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes)
   ##
